--- a/myblog/blog/templates/home.html
+++ b/myblog/blog/templates/home.html
@@ -1,4 +1,8 @@
-<h1>Post</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h1>Posts</h1>
 <ul>
 {% for post in object_list %}
     <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }} 
@@ -6,3 +10,5 @@
     {{ post.body }}</li>
 {% endfor %}
 </ul>
+
+{% endblock %}
