--- a/myblog/blog/templates/add_post.html
+++ b/myblog/blog/templates/add_post.html
@@ -4,10 +4,11 @@
 
 <h1>Add Post...</h1>
 <br><br>
-<form  method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="btn btn-secondary">Post</button>
-</form>
-
+<div class="form-group">
+    <form  method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-secondary">Post</button>
+    </form>
+</div>
 {% endblock %}
