post delete enabled

--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -6,6 +6,7 @@
 <small>By: {{ post.author.first_name }} 
     {{ post.author.last_name }}  
    <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+   <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
  </small><br>
 <hr>
 <br>
