--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -3,8 +3,10 @@
 
 {% block content %}
 <h1> {{ post.title }} </h1>
-<small>By: {{ post.author.first_name }} 
-    {{ post.author.last_name }}  
+<small>By: 
+  {{ post.author.first_name }} 
+  {{ post.author.last_name }}  - 
+  {{ post.post_date }} - 
    <a href="{% url 'update_post' post.pk %}">(Edit)</a>
    <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
  </small><br>
