--- a/myblog/blog/templates/home.html
+++ b/myblog/blog/templates/home.html
@@ -6,7 +6,7 @@
 <ul>
 {% for post in object_list %}
     <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }} 
-    {{ post.author.last_name }} - 
+    {{ post.author.last_name }} - {{ post.post_date }} -
     <small>
         <a href="{% url 'update_post' post.pk %}">(Edit)</a>
         <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
