added user authentication to add/edit/delete posts

--- a/myblog/blog/templates/update_post.html
+++ b/myblog/blog/templates/update_post.html
@@ -2,13 +2,20 @@
 {% block title %}Edit Blog Post{% endblock %}
 {% block content %}
 
-<h1>Update Post...</h1>
-<br><br>
-<div class="form-group">
-    <form  method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Update</button>
-    </form>
-</div>
+{% if user.is_authenticated %}
+    <h1>Update Post...</h1>
+    <br><br>
+    <div class="form-group">
+        <form  method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-secondary">Update</button>
+        </form>
+    </div>
+{% else %}
+
+    You're not allowed here!
+
+{% endif %}
+
 {% endblock %}
