--- a/myblog/blog/templates/add_post.html
+++ b/myblog/blog/templates/add_post.html
@@ -2,6 +2,7 @@
 {% block title %}Create A New Blog Post!{% endblock %}
 {% block content %}
 
+{% if user.is_authenticated %}
 <h1>Add Post...</h1>
 <br><br>
 <div class="form-group">
@@ -11,4 +12,10 @@
         <button class="btn btn-secondary">Post</button>
     </form>
 </div>
+{% else %}
+
+    You're not allowed here!
+
+{% endif %}
+
 {% endblock %}
