--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -6,9 +6,11 @@
 <small>By: 
   {{ post.author.first_name }} 
   {{ post.author.last_name }}  - 
-  {{ post.post_date }} - 
-   <a href="{% url 'update_post' post.pk %}">(Edit)</a>
-   <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+  {{ post.post_date }}  
+  {% if user.is_authenticated %}
+  - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+    <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+  {% endif %}
  </small><br>
 <hr>
 <br>
