--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -14,7 +14,7 @@
  </small><br>
 <hr>
 <br>
-{{ post.body }}
+{{ post.body|safe }}
 
 <br><br>
 <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
