--- a/myblog/blog/templates/home.html
+++ b/myblog/blog/templates/home.html
@@ -5,8 +5,13 @@
 <h1>Posts</h1>
 <ul>
 {% for post in object_list %}
-    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }} 
-    {{ post.author.last_name }} - {{ post.post_date }} 
+    <li><a href="{% url 'article-detail' post.pk %}">
+        {{ post.title }}</a> 
+        
+    - {{ post.category }}     
+    - {{ post.author.first_name }} 
+    {{ post.author.last_name }} - 
+    {{ post.post_date }} 
     <small>
         {% if user.is_authenticated %}
            - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
