--- a/myblog/blog/templates/home.html
+++ b/myblog/blog/templates/home.html
@@ -8,7 +8,7 @@
     <li><a href="{% url 'article-detail' post.pk %}">
         {{ post.title }}</a> 
         
-    - <a href="{% url 'category' post.category %}"> {{ post.category }} </a>     
+    - <a href="{% url 'category' post.category|slugify %}"> {{ post.category }} </a>     
     - {{ post.author.first_name }} 
     {{ post.author.last_name }} - 
     {{ post.post_date }} 
