determined correct user to edit posts

--- a/myblog/blog/templates/update_post.html
+++ b/myblog/blog/templates/update_post.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 {% if user.is_authenticated %}
+    {% if user.id == post.author.id %}
     <h1>Update Post...</h1>
     <br><br>
     <div class="form-group">
@@ -12,6 +13,9 @@
             <button class="btn btn-secondary">Update</button>
         </form>
     </div>
+    {% else %}
+        You're not allowed here!
+    {% endif %}
 {% else %}
 
     You're not allowed here!
