--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -2,14 +2,16 @@
 {% block title %}{{ post.title_tag  }}{% endblock %}
 
 {% block content %}
-<h1> {{ post.title }} </h1>
+<h1> {{ post.title }} - {{ post.author.id }} </h1>
 <small>By: 
   {{ post.author.first_name }} 
   {{ post.author.last_name }}  - 
   {{ post.post_date }}  
   {% if user.is_authenticated %}
-  - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
-    <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+    {% if user.id == post.author.id %}
+    - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+      <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+    {% endif %}
   {% endif %}
  </small><br>
 <hr>
