--- a/myblog/blog/templates/delete_post.html
+++ b/myblog/blog/templates/delete_post.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 {% if user.is_authenticated %}
+    {% if user.id == post.author.id %}
     <h1>Delete Post...</h1>
     <br><br>
     <h3>Delete: {{ post.title }} </h3>
@@ -14,6 +15,11 @@
             <button class="btn btn-secondary">Delete Post!</button>
         </form>
     </div>
+    {% else %}
+
+        You're not allowed here!
+
+    {% endif %}
 {% else %}
 
     You're not allowed here!
