--- a/myblog/blog/templates/home.html
+++ b/myblog/blog/templates/home.html
@@ -14,8 +14,10 @@
     {{ post.post_date }} 
     <small>
         {% if user.is_authenticated %}
-           - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
-            <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+            {% if user.id == post.author.id %}
+            - <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+              <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+            {% endif %}
         {% endif %}
     </small> <br>
     {{ post.body|slice:":500"|safe }}</li>
