added restrictions on who can make blog posts

--- a/myblog/blog/templates/add_post.html
+++ b/myblog/blog/templates/add_post.html
@@ -3,15 +3,22 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<h1>Add Post...</h1>
-<br><br>
-<div class="form-group">
-    <form  method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Post</button>
-    </form>
-</div>
+    <h1>Add Post...</h1>
+    <br><br>
+    <div class="form-group">
+        <form  method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-secondary">Post</button>
+        </form>
+    </div>
+
+    <script>
+        var name = "{{ user.id }}";
+        document.getElementById("elder").value = name;
+    </script>
+
+
 {% else %}
 
     You're not allowed here!
