--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -2,7 +2,7 @@
 {% block title %}{{ post.title_tag  }}{% endblock %}
 
 {% block content %}
-<h1> {{ post.title }} - {{ post.author.id }} </h1>
+<h1> {{ post.title }}</h1>
 <small>By: 
   {{ post.author.first_name }} 
   {{ post.author.last_name }}  - 
