added post snippet field

--- a/myblog/blog/templates/home.html
+++ b/myblog/blog/templates/home.html
@@ -20,7 +20,7 @@
             {% endif %}
         {% endif %}
     </small> <br>
-    {{ post.body|slice:":500"|safe }}</li>
+    {{ post.snippet }}</li>
 {% endfor %}
 </ul>
 
