--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -50,6 +50,9 @@
             <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
+          </li>
+          <li class="nav-item">
             <form id="logout-form" method="POST" action="{% url 'logout' %}">
               {% csrf_token %}
               <button type="submit" class="btn btn-link nav-link" style="border: none; background: none;">
