--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -16,6 +16,12 @@
  </small><br>
 <hr>
 <br>
+
+{% if post.header_image %}
+  <img src="{{ post.header_image.url }}" alt="">
+{% endif %} 
+
+<br><br>
 {{ post.body|safe }}
 
 <br><br>
