added default profile pic with static files

--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block title %}{{ post.title_tag  }}{% endblock %}
 
 {% block content %}
@@ -49,7 +51,11 @@
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-2">
-      <img src="{{ post.author.profile.profile_pic.url }}" class="card-img" alt="...">
+      {% if post.author.profile.profile_pic %}
+        <img src="{{ post.author.profile.profile_pic.url }}" class="card-img" alt="Profile Picture">
+      {% else %}
+        <img src="{% static 'blog/images/default-profile-pic.png' %}" class="card-img" alt="Default Profile Picture">
+      {% endif %}
     </div>
     <div class="col-md-10">
       <div class="card-body">
@@ -85,8 +91,4 @@
     </div>
   </div>
 </div>
-
-
-<!-- <img src="{{ post.author.profile.profile_pic.url }}" width="75" height="75" class="rounded-circle">
- -->
 {% endblock %}
