created edit profile page form

--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -49,8 +49,16 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Profile
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Settings</a>
+              <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
+            </div>
           </li>
           <li class="nav-item">
             <form id="logout-form" method="POST" action="{% url 'logout' %}">
