--- a/myblog/members/templates/registration/edit_profile.html
+++ b/myblog/members/templates/registration/edit_profile.html
@@ -2,7 +2,7 @@
 {% block title %}Edit Profile{% endblock %}
 {% block content %}
 
-<h1>Edit Profile...</h1>
+<h1>Edit Settings...</h1>
 <br><br>
 
 {{ user.profile.bio }}
