--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -55,11 +55,16 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Settings</a>
-              <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
+
+              {% if user.profile.id %}
+                <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
+              {% else %}
+                <a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile Page</a>
+              {% endif %}
             </div>
-          </li>
+          </li> 
           <li class="nav-item">
             <form id="logout-form" method="POST" action="{% url 'logout' %}">
               {% csrf_token %}
