--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -26,10 +26,7 @@
 <br><br>
 {{ post.body|safe }}
 
-<br><br>
-<a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
-
-<br><br>
+<br> 
 <hr>
 <br>
 <form action="{% url 'like_post' post.pk %}" method="POST">
@@ -47,7 +44,25 @@
   - {{ total_likes }} Likes
 </form>
 <br><br>
+<hr>
+<h2>Comments...</h2>
+<br>
+{% if not post.comments.all %}
+  No Comments Yet... <a href="#">Add One</a>
+{% else %}
+  {% for comment in post.comments.all %}
+    <strong>
+      {{ comment.name }} - 
+      {{ comment.date_added }}
+    </strong>
+    <br>
+    {{ comment.body }}
+    <br><br>
+    <hr>
+  {% endfor %}
+{% endif %}
 
+<br><br>
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-2">
