created add comment form

--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -44,25 +44,7 @@
   - {{ total_likes }} Likes
 </form>
 <br><br>
-<hr>
-<h2>Comments...</h2>
-<br>
-{% if not post.comments.all %}
-  No Comments Yet... <a href="#">Add One</a>
-{% else %}
-  {% for comment in post.comments.all %}
-    <strong>
-      {{ comment.name }} - 
-      {{ comment.date_added }}
-    </strong>
-    <br>
-    {{ comment.body }}
-    <br><br>
-    <hr>
-  {% endfor %}
-{% endif %}
 
-<br><br>
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-2">
@@ -108,4 +90,27 @@
     </div>
   </div>
 </div>
+
+<hr>
+<h1>Comments...</h1>
+<br>
+{% if not post.comments.all %}
+  No Comments Yet... <a href="{% url 'add_comment' post.pk %}">Add One</a>
+{% else %}
+<a href="{% url 'add_comment' post.pk %}">Add Comment</a> 
+<br><br>
+  {% for comment in post.comments.all %}
+    <strong>
+      {{ comment.name }} - 
+      {{ comment.date_added }}
+    </strong>
+    <br>
+    {{ comment.body }}
+    <br><br>
+  {% endfor %}
+  <a href="{% url 'add_comment' post.pk %}">Add Comment</a>
+{% endif %}
+<br>
+
+<br><br>
 {% endblock %}
