--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -48,31 +48,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Profile
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Settings</a>
-
-              {% if user.profile.id %}
-                <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
-              {% else %}
-                <a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile Page</a>
-              {% endif %}
-            </div>
           </li> 
-          <li class="nav-item">
-            <form id="logout-form" method="POST" action="{% url 'logout' %}">
-              {% csrf_token %}
-              <button type="submit" class="btn btn-link nav-link" style="border: none; background: none;">
-                  Logout
-              </button>
-            </form>
-          </li>
         {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'register' %}">Register</a>
@@ -82,10 +58,33 @@
           </li>
         {% endif %}
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      {% if user.is_authenticated %}
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ user.first_name }}
+            {{ user.last_name }}
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Settings</a>
+
+            {% if user.profile.id %}
+              <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
+            {% else %}
+              <a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile Page</a>
+            {% endif %}
+            <form id="logout-form" method="POST" action="{% url 'logout' %}">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-link dropdown-item">
+                Logout
+              </button>
+            </form>
+          </div>
+        </li>
+      </ul>  
+      {% endif %}
     </div>
   </nav>
   <br>
